--- a/stable/latest/book/g_object_values.html
+++ b/stable/latest/book/g_object_values.html
@@ -5,7 +5,6 @@
         <meta charset="UTF-8">
         <title>Generic Values - GUI development with Rust and GTK 4</title>
         <!-- Custom HTML head -->
-        <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#ffffff" />
@@ -29,13 +28,13 @@
     </head>
     <body>
         <!-- Provide site root to javascript -->
-        <script type="text/javascript">
+        <script>
             var path_to_root = "";
             var default_theme = window.matchMedia("(prefers-color-scheme: dark)").matches ? "navy" : "rust";
         </script>
 
         <!-- Work around some values being stored in localStorage wrapped in quotes -->
-        <script type="text/javascript">
+        <script>
             try {
                 var theme = localStorage.getItem('mdbook-theme');
                 var sidebar = localStorage.getItem('mdbook-sidebar');
@@ -51,7 +50,7 @@
         </script>
 
         <!-- Set the theme before any content is loaded, prevents flash -->
-        <script type="text/javascript">
+        <script>
             var theme;
             try { theme = localStorage.getItem('mdbook-theme'); } catch(e) { }
             if (theme === null || theme === undefined) { theme = default_theme; }
@@ -63,7 +62,7 @@
         </script>
 
         <!-- Hide / unhide sidebar before it is displayed -->
-        <script type="text/javascript">
+        <script>
             var html = document.querySelector('html');
             var sidebar = 'hidden';
             if (document.body.clientWidth >= 1080) {
@@ -95,7 +94,7 @@
                         </button>
                         <ul id="theme-list" class="theme-popup" aria-label="Themes" role="menu">
                             <li role="none"><button role="menuitem" class="theme" id="light">Light</button></li>
-                            <li role="none"><button role="menuitem" class="theme" id="rust">Rust (default)</button></li>
+                            <li role="none"><button role="menuitem" class="theme" id="rust">Rust</button></li>
                             <li role="none"><button role="menuitem" class="theme" id="coal">Coal</button></li>
                             <li role="none"><button role="menuitem" class="theme" id="navy">Navy</button></li>
                             <li role="none"><button role="menuitem" class="theme" id="ayu">Ayu</button></li>
@@ -128,7 +127,7 @@
                     </div>
                 </div>
                 <!-- Apply ARIA attributes after the sidebar and the sidebar toggle button are added to the DOM -->
-                <script type="text/javascript">
+                <script>
                     document.getElementById('sidebar-toggle').setAttribute('aria-expanded', sidebar === 'visible');
                     document.getElementById('sidebar').setAttribute('aria-hidden', sidebar !== 'visible');
                     Array.from(document.querySelectorAll('#sidebar a')).forEach(function(link) {
@@ -157,8 +156,7 @@ Conceptually, a <code>Value</code> is similar to a Rust <code>enum</code> define
     // boxed types
     String(Option&lt;String&gt;),
     Object(Option&lt;dyn IsA&lt;glib::Object&gt;&gt;),
-}
-</code></pre>
+}</code></pre>
 <p>For example, this is how you would use a <code>Value</code> representing an <code>i32</code>.</p>
 <p>Filename: <a class=file-link href="https://github.com/gtk-rs/gtk4-rs/blob/master/book/listings/g_object_values/1/main.rs">listings/g_object_values/1/main.rs</a></p>
 <pre><code class="language-rust  no_run noplayground"><span class="boring">use gtk::prelude::*;
@@ -201,8 +199,7 @@ Conceptually, a <code>Value</code> is similar to a Rust <code>enum</code> define
 </span><span class="boring">    // Check if the retrieved value is correct
 </span><span class="boring">    assert_eq!(string_some, Some(&quot;Hello!&quot;.to_string()));
 </span><span class="boring">    assert_eq!(string_none, None);
-</span><span class="boring">}
-</span></code></pre>
+</span><span class="boring">}</span></code></pre>
 <p>Also note that in the <code>enum</code> above boxed types such as <code>String</code> or <code>glib::Object</code> are wrapped in an <code>Option</code>.
 This comes from C, where every boxed type can potentially be <code>None</code> (or <code>NULL</code> in C terms).
 You can still access it the same way as with the <code>i32</code> above.
@@ -248,8 +245,7 @@ You can still access it the same way as with the <code>i32</code> above.
 </span><span class="boring">    // Check if the retrieved value is correct
 </span><span class="boring">    assert_eq!(string_some, Some(&quot;Hello!&quot;.to_string()));
 </span><span class="boring">    assert_eq!(string_none, None);
-</span><span class="boring">}
-</span></code></pre>
+</span><span class="boring">}</span></code></pre>
 <p>If you want to differentiate between specifying the wrong type and a <code>Value</code> representing <code>None</code>, just call <code>get::&lt;Option&lt;T&gt;&gt;</code> instead.</p>
 <p>Filename: <a class=file-link href="https://github.com/gtk-rs/gtk4-rs/blob/master/book/listings/g_object_values/1/main.rs">listings/g_object_values/1/main.rs</a></p>
 <pre><code class="language-rust  no_run noplayground"><span class="boring">use gtk::prelude::*;
@@ -292,8 +288,7 @@ You can still access it the same way as with the <code>i32</code> above.
     // Check if the retrieved value is correct
     assert_eq!(string_some, Some(&quot;Hello!&quot;.to_string()));
     assert_eq!(string_none, None);
-<span class="boring">}
-</span></code></pre>
+<span class="boring">}</span></code></pre>
 <p>We will use <code>Value</code> when we deal with properties and signals later on.</p>
 <h2 id="variant"><a class="header" href="#variant">Variant</a></h2>
 <p>A <code>Variant</code> is used whenever data needs to be serialized, for example for sending it to another process or over the network, or for storing it on disk.
@@ -322,8 +317,7 @@ Variants can even be <a href="https://gtk-rs.org/gtk-rs-core/stable/latest/docs/
 </span><span class="boring">        .get::&lt;Vec&lt;String&gt;&gt;()
 </span><span class="boring">        .expect(&quot;The variant needs to be of type `String`.&quot;);
 </span><span class="boring">    assert_eq!(vec[0], &quot;Hello&quot;);
-</span><span class="boring">}
-</span></code></pre>
+</span><span class="boring">}</span></code></pre>
 <p>However, a <code>Variant</code> is also able to represent containers such as <a href="https://doc.rust-lang.org/std/collections/struct.HashMap.html"><code>HashMap</code></a> or <a href="https://doc.rust-lang.org/std/vec/struct.Vec.html"><code>Vec</code></a>.
 The following snippet shows how to convert between <code>Vec</code> and <code>Variant</code>.
 More examples can be found in the <a href="https://gtk-rs.org/gtk-rs-core/stable/latest/docs/glib/variant/index.html">docs</a>.</p>
@@ -348,8 +342,7 @@ More examples can be found in the <a href="https://gtk-rs.org/gtk-rs-core/stable
         .get::&lt;Vec&lt;String&gt;&gt;()
         .expect(&quot;The variant needs to be of type `String`.&quot;);
     assert_eq!(vec[0], &quot;Hello&quot;);
-<span class="boring">}
-</span></code></pre>
+<span class="boring">}</span></code></pre>
 <p>We will use <code>Variant</code> when saving settings using <a href="https://gtk-rs.org/gtk-rs-core/stable/latest/docs/gio/struct.Settings.html"><code>gio::Settings</code></a> or activating actions via <a href="https://gtk-rs.org/gtk-rs-core/stable/latest/docs/gio/struct.Action.html"><code>gio::Action</code></a>.</p>
 
                     </main>
@@ -378,15 +371,15 @@ More examples can be found in the <a href="https://gtk-rs.org/gtk-rs-core/stable
 
         </div>
 
-        <script type="text/javascript">
+        <script>
             window.playground_copyable = true;
         </script>
-        <script src="elasticlunr.min.js" type="text/javascript" charset="utf-8"></script>
-        <script src="mark.min.js" type="text/javascript" charset="utf-8"></script>
-        <script src="searcher.js" type="text/javascript" charset="utf-8"></script>
-        <script src="clipboard.min.js" type="text/javascript" charset="utf-8"></script>
-        <script src="highlight.js" type="text/javascript" charset="utf-8"></script>
-        <script src="book.js" type="text/javascript" charset="utf-8"></script>
+        <script src="elasticlunr.min.js"></script>
+        <script src="mark.min.js"></script>
+        <script src="searcher.js"></script>
+        <script src="clipboard.min.js"></script>
+        <script src="highlight.js"></script>
+        <script src="book.js"></script>
 
         <!-- Custom JS scripts -->
     </body>
