--- a/stable/latest/book/todo_1.html
+++ b/stable/latest/book/todo_1.html
@@ -5,7 +5,6 @@
         <meta charset="UTF-8">
         <title>Building a Simple To-Do App - GUI development with Rust and GTK 4</title>
         <!-- Custom HTML head -->
-        <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#ffffff" />
@@ -29,13 +28,13 @@
     </head>
     <body>
         <!-- Provide site root to javascript -->
-        <script type="text/javascript">
+        <script>
             var path_to_root = "";
             var default_theme = window.matchMedia("(prefers-color-scheme: dark)").matches ? "navy" : "rust";
         </script>
 
         <!-- Work around some values being stored in localStorage wrapped in quotes -->
-        <script type="text/javascript">
+        <script>
             try {
                 var theme = localStorage.getItem('mdbook-theme');
                 var sidebar = localStorage.getItem('mdbook-sidebar');
@@ -51,7 +50,7 @@
         </script>
 
         <!-- Set the theme before any content is loaded, prevents flash -->
-        <script type="text/javascript">
+        <script>
             var theme;
             try { theme = localStorage.getItem('mdbook-theme'); } catch(e) { }
             if (theme === null || theme === undefined) { theme = default_theme; }
@@ -63,7 +62,7 @@
         </script>
 
         <!-- Hide / unhide sidebar before it is displayed -->
-        <script type="text/javascript">
+        <script>
             var html = document.querySelector('html');
             var sidebar = 'hidden';
             if (document.body.clientWidth >= 1080) {
@@ -95,7 +94,7 @@
                         </button>
                         <ul id="theme-list" class="theme-popup" aria-label="Themes" role="menu">
                             <li role="none"><button role="menuitem" class="theme" id="light">Light</button></li>
-                            <li role="none"><button role="menuitem" class="theme" id="rust">Rust (default)</button></li>
+                            <li role="none"><button role="menuitem" class="theme" id="rust">Rust</button></li>
                             <li role="none"><button role="menuitem" class="theme" id="coal">Coal</button></li>
                             <li role="none"><button role="menuitem" class="theme" id="navy">Navy</button></li>
                             <li role="none"><button role="menuitem" class="theme" id="ayu">Ayu</button></li>
@@ -128,7 +127,7 @@
                     </div>
                 </div>
                 <!-- Apply ARIA attributes after the sidebar and the sidebar toggle button are added to the DOM -->
-                <script type="text/javascript">
+                <script>
                     document.getElementById('sidebar-toggle').setAttribute('aria-expanded', sidebar === 'visible');
                     document.getElementById('sidebar').setAttribute('aria-hidden', sidebar !== 'visible');
                     Array.from(document.querySelectorAll('#sidebar a')).forEach(function(link) {
@@ -307,8 +306,7 @@ As usual, we have to list all <a href="https://docs.gtk.org/gtk4/class.Applicati
 </span><span class="boring">        // Set the factory of the list view
 </span><span class="boring">        self.imp().tasks_list.set_factory(Some(&amp;factory));
 </span><span class="boring">    }
-</span><span class="boring">}
-</span></code></pre>
+</span><span class="boring">}</span></code></pre>
 <p>Then we initialize the composite template for <code>imp::Window</code>.
 We store references to the entry, the list view as well as the list model.
 This will come in handy when we later add methods to our window.
@@ -371,8 +369,7 @@ impl ObjectSubclass for Window {
 </span><span class="boring">impl WindowImpl for Window {}
 </span><span class="boring">
 </span><span class="boring">// Trait shared by all application windows
-</span><span class="boring">impl ApplicationWindowImpl for Window {}
-</span></code></pre>
+</span><span class="boring">impl ApplicationWindowImpl for Window {}</span></code></pre>
 <p><code>main.rs</code> also does not hold any surprises for us.</p>
 <p>Filename: <a class=file-link href="https://github.com/gtk-rs/gtk4-rs/blob/master/book/listings/todo/1/main.rs">listings/todo/1/main.rs</a></p>
 <pre><code class="language-rust  no_run noplayground"><span class="boring">mod task_object;
@@ -404,8 +401,7 @@ fn build_ui(app: &amp;Application) {
     // Create a new custom window and show it
     let window = Window::new(app);
     window.present();
-}
-</code></pre>
+}</code></pre>
 <p>Finally, we specify our resources.
 Here, they already include <code>task_row.ui</code> which we will handle later in this chapter.</p>
 <p>Filename: <a class=file-link href="https://github.com/gtk-rs/gtk4-rs/blob/master/book/listings/todo/1/resources/resources.gresource.xml">listings/todo/1/resources/resources.gresource.xml</a></p>
@@ -454,8 +450,7 @@ impl TaskObject {
 </span><span class="boring">pub struct TaskData {
 </span><span class="boring">    pub completed: bool,
 </span><span class="boring">    pub content: String,
-</span><span class="boring">}
-</span></code></pre>
+</span><span class="boring">}</span></code></pre>
 <p>Unlike the lists chapter, the state is stored in a struct rather than in individual members of <code>imp::TaskObject</code>.
 This will be very convenient when saving the state in one of the following chapters.</p>
 <p>Filename: <a class=file-link href="https://github.com/gtk-rs/gtk4-rs/blob/master/book/listings/todo/1/task_object/mod.rs">listings/todo/1/task_object/mod.rs</a></p>
@@ -481,8 +476,7 @@ This will be very convenient when saving the state in one of the following chapt
 pub struct TaskData {
     pub completed: bool,
     pub content: String,
-}
-</code></pre>
+}</code></pre>
 <p>Exposing <code>completed</code> and <code>content</code> as properties does not become much different that way, so we will not discuss it further.
 If you are curious, you can press on the small eye symbol on the top right of the code snippet to read the implementation.</p>
 <p>Filename: <a class=file-link href="https://github.com/gtk-rs/gtk4-rs/blob/master/book/listings/todo/1/task_object/imp.rs">listings/todo/1/task_object/imp.rs</a></p>
@@ -546,8 +540,7 @@ impl ObjectSubclass for TaskObject {
 </span><span class="boring">            _ =&gt; unimplemented!(),
 </span><span class="boring">        }
 </span><span class="boring">    }
-</span><span class="boring">}
-</span></code></pre>
+</span><span class="boring">}</span></code></pre>
 <h2 id="to-do-row"><a class="header" href="#to-do-row">To-Do Row</a></h2>
 <p>Let's move on to the individual tasks.
 The row of a task should look like this:</p>
@@ -651,8 +644,7 @@ The row of a task should look like this:</p>
 </span><span class="boring">            binding.unbind();
 </span><span class="boring">        }
 </span><span class="boring">    }
-</span><span class="boring">}
-</span></code></pre>
+</span><span class="boring">}</span></code></pre>
 <p>In <code>imp::TaskRow</code>, we hold references to <code>completed_button</code> and <code>content_label</code>.
 We also store a mutable vector of bindings.
 Why we need that will become clear as soon as we get to bind the state of <code>TaskObject</code> to the corresponding <code>TaskRow</code>.</p>
@@ -700,8 +692,7 @@ impl ObjectSubclass for TaskRow {
 </span><span class="boring">impl WidgetImpl for TaskRow {}
 </span><span class="boring">
 </span><span class="boring">// Trait shared by all boxes
-</span><span class="boring">impl BoxImpl for TaskRow {}
-</span></code></pre>
+</span><span class="boring">impl BoxImpl for TaskRow {}</span></code></pre>
 <p>Now we can bring everything together.
 We override the <code>imp::Window::constructed</code> in order to set up window contents at the time of its construction.</p>
 <p>Filename: <a class=file-link href="https://github.com/gtk-rs/gtk4-rs/blob/master/book/listings/todo/1/window/imp.rs">listings/todo/1/window/imp.rs</a></p>
@@ -761,8 +752,7 @@ impl ObjectImpl for Window {
 </span><span class="boring">impl WindowImpl for Window {}
 </span><span class="boring">
 </span><span class="boring">// Trait shared by all application windows
-</span><span class="boring">impl ApplicationWindowImpl for Window {}
-</span></code></pre>
+</span><span class="boring">impl ApplicationWindowImpl for Window {}</span></code></pre>
 <p>Since we need to access the list model quite often, we add the convenience method <code>Window::model</code> for that.
 In <code>Window::setup_tasks</code> we create a new model.
 Then we store a reference to the model in <code>imp::Window</code> as well as in <code>gtk::ListView</code>.</p>
@@ -886,8 +876,7 @@ Then we store a reference to the model in <code>imp::Window</code> as well as in
 </span><span class="boring">        // Set the factory of the list view
 </span><span class="boring">        self.imp().tasks_list.set_factory(Some(&amp;factory));
 </span><span class="boring">    }
-</span><span class="boring">}
-</span></code></pre>
+</span><span class="boring">}</span></code></pre>
 <p>In <code>Window::setup_callbacks</code> we connect to the &quot;activate&quot; signal of the entry.
 This signal is triggered when we press the enter key in the entry.
 Then a new <code>TaskObject</code> with the content will be created and appended to the model.
@@ -1012,8 +1001,7 @@ Finally, the entry will be cleared.</p>
 </span><span class="boring">        // Set the factory of the list view
 </span><span class="boring">        self.imp().tasks_list.set_factory(Some(&amp;factory));
 </span><span class="boring">    }
-</span><span class="boring">}
-</span></code></pre>
+</span><span class="boring">}</span></code></pre>
 <p>The list elements for the <code>gtk::ListView</code> are produced by a factory.
 Before we move on to the implementation, let's take a step back and think about which behavior we expect here.
 <code>content_label</code> of <code>TaskRow</code> should follow <code>content</code> of <code>TaskObject</code>.
@@ -1144,8 +1132,7 @@ We will need to unbind them manually when they are no longer needed.</p>
         // Set the factory of the list view
         self.imp().tasks_list.set_factory(Some(&amp;factory));
     }
-<span class="boring">}
-</span></code></pre>
+<span class="boring">}</span></code></pre>
 <p>Binding properties in <code>TaskRow::bind</code> works just like in former chapters.
 The only difference is that we store the bindings in a vector.
 This is necessary because a <code>TaskRow</code> will be reused as you scroll through the list.
@@ -1225,8 +1212,7 @@ Unbinding will only work if it can access the stored <a href="https://gtk-rs.org
 </span><span class="boring">            binding.unbind();
 </span><span class="boring">        }
 </span><span class="boring">    }
-</span><span class="boring">}
-</span></code></pre>
+</span><span class="boring">}</span></code></pre>
 <p><code>TaskRow::unbind</code> takes care of the cleanup.
 It iterates through the vector and unbinds each binding.
 In the end, it clears the vector.</p>
@@ -1304,8 +1290,7 @@ In the end, it clears the vector.</p>
             binding.unbind();
         }
     }
-<span class="boring">}
-</span></code></pre>
+<span class="boring">}</span></code></pre>
 <p>That was it, we created a basic To-Do app!
 We will extend it with additional functionality in the following chapters.</p>
 <div style="text-align:center">
@@ -1341,15 +1326,15 @@ Your browser does not support the video tag.
 
         </div>
 
-        <script type="text/javascript">
+        <script>
             window.playground_copyable = true;
         </script>
-        <script src="elasticlunr.min.js" type="text/javascript" charset="utf-8"></script>
-        <script src="mark.min.js" type="text/javascript" charset="utf-8"></script>
-        <script src="searcher.js" type="text/javascript" charset="utf-8"></script>
-        <script src="clipboard.min.js" type="text/javascript" charset="utf-8"></script>
-        <script src="highlight.js" type="text/javascript" charset="utf-8"></script>
-        <script src="book.js" type="text/javascript" charset="utf-8"></script>
+        <script src="elasticlunr.min.js"></script>
+        <script src="mark.min.js"></script>
+        <script src="searcher.js"></script>
+        <script src="clipboard.min.js"></script>
+        <script src="highlight.js"></script>
+        <script src="book.js"></script>
 
         <!-- Custom JS scripts -->
     </body>
