--- a/stable/latest/book/todo_2.html
+++ b/stable/latest/book/todo_2.html
@@ -5,7 +5,6 @@
         <meta charset="UTF-8">
         <title>Manipulating State of To-Do App - GUI development with Rust and GTK 4</title>
         <!-- Custom HTML head -->
-        <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#ffffff" />
@@ -29,13 +28,13 @@
     </head>
     <body>
         <!-- Provide site root to javascript -->
-        <script type="text/javascript">
+        <script>
             var path_to_root = "";
             var default_theme = window.matchMedia("(prefers-color-scheme: dark)").matches ? "navy" : "rust";
         </script>
 
         <!-- Work around some values being stored in localStorage wrapped in quotes -->
-        <script type="text/javascript">
+        <script>
             try {
                 var theme = localStorage.getItem('mdbook-theme');
                 var sidebar = localStorage.getItem('mdbook-sidebar');
@@ -51,7 +50,7 @@
         </script>
 
         <!-- Set the theme before any content is loaded, prevents flash -->
-        <script type="text/javascript">
+        <script>
             var theme;
             try { theme = localStorage.getItem('mdbook-theme'); } catch(e) { }
             if (theme === null || theme === undefined) { theme = default_theme; }
@@ -63,7 +62,7 @@
         </script>
 
         <!-- Hide / unhide sidebar before it is displayed -->
-        <script type="text/javascript">
+        <script>
             var html = document.querySelector('html');
             var sidebar = 'hidden';
             if (document.body.clientWidth >= 1080) {
@@ -95,7 +94,7 @@
                         </button>
                         <ul id="theme-list" class="theme-popup" aria-label="Themes" role="menu">
                             <li role="none"><button role="menuitem" class="theme" id="light">Light</button></li>
-                            <li role="none"><button role="menuitem" class="theme" id="rust">Rust (default)</button></li>
+                            <li role="none"><button role="menuitem" class="theme" id="rust">Rust</button></li>
                             <li role="none"><button role="menuitem" class="theme" id="coal">Coal</button></li>
                             <li role="none"><button role="menuitem" class="theme" id="navy">Navy</button></li>
                             <li role="none"><button role="menuitem" class="theme" id="ayu">Ayu</button></li>
@@ -128,7 +127,7 @@
                     </div>
                 </div>
                 <!-- Apply ARIA attributes after the sidebar and the sidebar toggle button are added to the DOM -->
-                <script type="text/javascript">
+                <script>
                     document.getElementById('sidebar-toggle').setAttribute('aria-expanded', sidebar === 'visible');
                     document.getElementById('sidebar').setAttribute('aria-hidden', sidebar !== 'visible');
                     Array.from(document.querySelectorAll('#sidebar a')).forEach(function(link) {
@@ -309,8 +308,7 @@ pub struct Window {
 </span><span class="boring">}
 </span><span class="boring">
 </span><span class="boring">// Trait shared by all application windows
-</span><span class="boring">impl ApplicationWindowImpl for Window {}
-</span></code></pre>
+</span><span class="boring">impl ApplicationWindowImpl for Window {}</span></code></pre>
 <p>Again, we create functions to make it easier to access settings.</p>
 <p>Filename: <a class=file-link href="https://github.com/gtk-rs/gtk4-rs/blob/master/book/listings/todo/2/window/mod.rs">listings/todo/2/window/mod.rs</a></p>
 <pre><code class="language-rust  no_run noplayground"><span class="boring">mod imp;
@@ -547,8 +545,7 @@ pub struct Window {
 </span><span class="boring">        );
 </span><span class="boring">        self.add_action(&amp;action_remove_done_tasks);
 </span><span class="boring">    }
-</span><span class="boring">}
-</span></code></pre>
+</span><span class="boring">}</span></code></pre>
 <p>We also add the methods <code>is_completed</code>, <code>task_data</code> and <code>from_task_data</code> to <code>TaskObject</code>.
 We will make use of them in the following snippets.</p>
 <p>Filename: <a class=file-link href="https://github.com/gtk-rs/gtk4-rs/blob/master/book/listings/todo/2/task_object/mod.rs">listings/todo/2/task_object/mod.rs</a></p>
@@ -588,8 +585,7 @@ We will make use of them in the following snippets.</p>
 </span><span class="boring">pub struct TaskData {
 </span><span class="boring">    pub completed: bool,
 </span><span class="boring">    pub content: String,
-</span><span class="boring">}
-</span></code></pre>
+</span><span class="boring">}</span></code></pre>
 <p>Similar to the previous chapter, we let <code>settings</code> create the action.
 Then we add the newly created action &quot;filter&quot; to our window.
 We also add an action which allows us to remove done tasks. </p>
@@ -828,8 +824,7 @@ We also add an action which allows us to remove done tasks. </p>
         );
         self.add_action(&amp;action_remove_done_tasks);
     }
-<span class="boring">}
-</span></code></pre>
+<span class="boring">}</span></code></pre>
 <p>After activating the action &quot;win.filter&quot;, the corresponding setting will be changed.
 So we need a method which translates this setting into a filter that the <a href="../docs/gtk4/struct.FilterListModel.html"><code>gtk::FilterListModel</code></a> understands.
 The possible states are &quot;All&quot;, &quot;Open&quot; and &quot;Done&quot;. 
@@ -1070,8 +1065,7 @@ If the state is &quot;All&quot; nothing has to be filtered out, so we return <co
 </span><span class="boring">        );
 </span><span class="boring">        self.add_action(&amp;action_remove_done_tasks);
 </span><span class="boring">    }
-</span><span class="boring">}
-</span></code></pre>
+</span><span class="boring">}</span></code></pre>
 <p>Now, we can set up the model.
 We initialize <code>filter_model</code> with the state from the settings by calling the method <code>filter</code>.
 Whenever the state of the key &quot;filter&quot; changes, we call the method <code>filter</code> again to get the updated <code>filter_model</code>.</p>
@@ -1310,8 +1304,7 @@ Whenever the state of the key &quot;filter&quot; changes, we call the method <co
 </span><span class="boring">        );
 </span><span class="boring">        self.add_action(&amp;action_remove_done_tasks);
 </span><span class="boring">    }
-</span><span class="boring">}
-</span></code></pre>
+</span><span class="boring">}</span></code></pre>
 <p>Then, we bind the shortcuts to their actions with <code>set_accels_for_action</code>.
 Here as well, a detailed action name is used.
 Since this has to be done at the application level, <code>setup_shortcuts</code> takes a <code>gtk::Application</code> as parameter.</p>
@@ -1353,8 +1346,7 @@ fn setup_shortcuts(app: &amp;Application) {
 </span><span class="boring">    // Create a new custom window and show it
 </span><span class="boring">    let window = Window::new(app);
 </span><span class="boring">    window.present();
-</span><span class="boring">}
-</span></code></pre>
+</span><span class="boring">}</span></code></pre>
 <p>Now that we created all these nice shortcuts we will want our users to find them.
 We do that by creating a shortcut window.
 Again we use an <code>ui</code> file to describe it, but here we don't want to use it as template for our custom widget.
@@ -1486,8 +1478,7 @@ Doing so allows us to derive <code>Serialize</code> and <code>Deserialize</code>
 pub struct TaskData {
     pub completed: bool,
     pub content: String,
-}
-</code></pre>
+}</code></pre>
 <p>We plan to store our data as a file, so we create a utility function to provide a suitable file path for us.
 We use <a href="https://gtk-rs.org/gtk-rs-core/stable/latest/docs/glib/fn.user_config_dir.html"><code>glib::user_config_dir</code></a> to get the path to the config directory and create a new subdirectory for our app.
 Then we return the file path.</p>
@@ -1504,8 +1495,7 @@ Then we return the file path.</p>
     std::fs::create_dir_all(&amp;path).expect(&quot;Could not create directory.&quot;);
     path.push(&quot;data.json&quot;);
     path
-}
-</code></pre>
+}</code></pre>
 <p>We override the <code>close_request</code> virtual function to save the tasks when the window is closed.
 To do so, we first iterate through all entries and store them in a <code>Vec</code>.
 Then we serialize the <code>Vec</code> and store the data as a json file.</p>
@@ -1598,8 +1588,7 @@ impl WindowImpl for Window {
 }
 <span class="boring">
 </span><span class="boring">// Trait shared by all application windows
-</span><span class="boring">impl ApplicationWindowImpl for Window {}
-</span></code></pre>
+</span><span class="boring">impl ApplicationWindowImpl for Window {}</span></code></pre>
 <p>Let's it have a look into what a <code>Vec&lt;TaskData&gt;</code> will be serialized.
 Note that <a href="https://docs.serde.rs/serde_json/fn.to_writer.html"><code>serde_json::to_writer</code></a> saves the data into a more concise, but also less readable way.
 To create the equivalent but nicely formatted json below you can just replace <code>to_writer</code> with <a href="https://docs.serde.rs/serde_json/fn.to_writer_pretty.html"><code>serde_json::to_writer_pretty</code></a>.</p>
@@ -1866,8 +1855,7 @@ It might be the first time that we started the app and therefore there is no for
 </span><span class="boring">        );
 </span><span class="boring">        self.add_action(&amp;action_remove_done_tasks);
 </span><span class="boring">    }
-</span><span class="boring">}
-</span></code></pre>
+</span><span class="boring">}</span></code></pre>
 <p>Finally, we make sure that everything is set up in <code>constructed</code>.</p>
 <p>Filename: <a class=file-link href="https://github.com/gtk-rs/gtk4-rs/blob/master/book/listings/todo/2/window/imp.rs">listings/todo/2/window/imp.rs</a></p>
 <pre><code class="language-rust  no_run noplayground"><span class="boring">use std::cell::RefCell;
@@ -1959,8 +1947,7 @@ impl ObjectImpl for Window {
 </span><span class="boring">
 </span><span class="boring">// Trait shared by all application windows
 </span><span class="boring">impl ApplicationWindowImpl for Window {}
-</span>
-</code></pre>
+</span></code></pre>
 <p>Our To-Do app suddenly became much more useful.
 Not only can we filter tasks, we also retain our tasks between sessions.</p>
 
@@ -1990,15 +1977,15 @@ Not only can we filter tasks, we also retain our tasks between sessions.</p>
 
         </div>
 
-        <script type="text/javascript">
+        <script>
             window.playground_copyable = true;
         </script>
-        <script src="elasticlunr.min.js" type="text/javascript" charset="utf-8"></script>
-        <script src="mark.min.js" type="text/javascript" charset="utf-8"></script>
-        <script src="searcher.js" type="text/javascript" charset="utf-8"></script>
-        <script src="clipboard.min.js" type="text/javascript" charset="utf-8"></script>
-        <script src="highlight.js" type="text/javascript" charset="utf-8"></script>
-        <script src="book.js" type="text/javascript" charset="utf-8"></script>
+        <script src="elasticlunr.min.js"></script>
+        <script src="mark.min.js"></script>
+        <script src="searcher.js"></script>
+        <script src="clipboard.min.js"></script>
+        <script src="highlight.js"></script>
+        <script src="book.js"></script>
 
         <!-- Custom JS scripts -->
     </body>
